clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_for_in_multiline.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 148
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "for x in a b c\ndo\n    echo $x\ndone",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ForClause(ForClauseCommand(
                variable_name: "x",
                values: Some([
                  Word(
                    value: "a",
                    loc: "[location]",
                  ),
                  Word(
                    value: "b",
                    loc: "[location]",
                  ),
                  Word(
                    value: "c",
                    loc: "[location]",
                  ),
                ]),
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "$x",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
