clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_for_no_in.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 159
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "for x; do echo $x; done",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ForClause(ForClauseCommand(
                variable_name: "x",
                values: None,
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "$x",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
