clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_nested_subshell.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 121
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "( ( echo nested ) )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Arithmetic(ArithmeticCommand(
                expr: UnexpandedArithmeticExpr(
                  value: "echo nested",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
