clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_until.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 284
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "until false; do echo loop; done",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(UntilClause(WhileOrUntilClauseCommand(CompoundList([
                CompoundListItem(AndOrList(
                  first: Pipeline(
                    seq: [
                      Simple(SimpleCommand(
                        word_or_name: Some(Word(
                          value: "false",
                          loc: "[location]",
                        )),
                      )),
                    ],
                  ),
                ), Sequence),
              ]), DoGroupCommand(
                list: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Simple(SimpleCommand(
                          word_or_name: Some(Word(
                            value: "echo",
                            loc: "[location]",
                          )),
                          suffix: Some(CommandSuffix([
                            Word(Word(
                              value: "loop",
                              loc: "[location]",
                            )),
                          ])),
                        )),
                      ],
                    ),
                  ), Sequence),
                ]),
                loc: "[location]",
              ), SourceSpan(
                start: SourcePosition(
                  index: 0,
                  line: 1,
                  column: 1,
                ),
                end: SourcePosition(
                  index: 31,
                  line: 1,
                  column: 32,
                ),
              ))), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
